src/policy/snapshots/terrabastard__policy__json__test__example_4.snap
---
source: src/policy/json.rs
expression: "hcl::to_string(&hcl_policy)?"
---
resource "aws_iam_policy_document" "example_4" {
  version = "2012-10-17"

  statement {
    effect = "Allow"
    actions = [
      "sts:AssumeRole"
    ]
    sid = "ec2"

    principals {
      type = "Service"
      identifiers = [
        "ec2.amazonaws.com"
      ]
    }
  }

  statement {
    effect = "Allow"
    actions = [
      "sts:AssumeRole"
    ]
    sid = "zebra"

    principals {
      type = "AWS"
      identifiers = [
        "arn:aws:iam::bar:role/zebra-agents",
        "arn:aws:iam::bar:role/zebra-master"
      ]
    }
  }

  statement {
    effect = "Allow"
    actions = [
      "sts:AssumeRoleWithWebIdentity"
    ]

    principals {
      type = "Federated"
      identifiers = [
        "arn:aws:iam::baz:oidc-provider/oidc.eks.eu-central-1.amazonaws.com/id/foo"
      ]
    }

    condition {
      test = "StringLikeIfExists"
      variable = "oidc.eks.eu-central-1.amazonaws.com/id/foo:*"
      values = [
        "*"
      ]
    }
  }
}

